--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tiddlywiki_bot"]
-	path = tiddlywiki_bot
+	path = tiddly_wiki_bot
 	url = git@github.com:carlo-colombo/tiddlywiki_bot.git
