Moving dashboard in tiddlywiki

--- a/spec/bot.yml
+++ b/spec/bot.yml
@@ -126,7 +126,7 @@ apiVersion: kbld.k14s.io/v1alpha1
 kind: Sources
 sources:
 - image: dashboard
-  path: ../dashboard
+  path: dashboard
   pack:
     build:
       builder: carlocolombo/elixir-builder
