Using pack to build extract info
* setting engine to node 14

--- a/spec/bot.yml
+++ b/spec/bot.yml
@@ -140,6 +140,9 @@ kind: Sources
 sources:
 - image: extract-info
   path: extract-info
+  pack:
+    build:
+      builder: paketobuildpacks/builder:base
 
 #! Specifies where to push app1 image
 ---
