--- a/spec/images.yml
+++ b/spec/images.yml
@@ -5,28 +5,41 @@ apiVersion: kbld.k14s.io/v1alpha1
 kind: Sources
 sources:
 - image: tiddly_wiki_bot
-  path: tiddly_wiki_bot
+  path: .
   pack:
     build:
       builder: rg.nl-ams.scw.cloud/carlo-colombo/elixir-builder
       rawOptions:
-        - --volume
-        - #@ data.values.release.deps_path + "/common:/deps/common"
+        - -e
+        - RELEASE=tiddly_wiki_bot
 
 ---
 apiVersion: kbld.k14s.io/v1alpha1
 kind: Sources
 sources:
 - image: dashboard
-  path: dashboard
+  path: .
   pack:
     build:
       builder: rg.nl-ams.scw.cloud/carlo-colombo/elixir-builder
       rawOptions:
         - -e
         - #@ 'SECRET_KEY_BASE='+ data.values.release.secret_key_base
-        - --volume
-        - #@ data.values.release.deps_path + "/common:/deps/common"
+        - -e
+        - RELEASE=dashboard
+
+---
+apiVersion: kbld.k14s.io/v1alpha1
+kind: Sources
+sources:
+- image: feed2wiki
+  path: .
+  pack:
+    build:
+      builder: rg.nl-ams.scw.cloud/carlo-colombo/elixir-builder
+      rawOptions:
+        - -e
+        - RELEASE=feed2wiki
 
 ---
 apiVersion: kbld.k14s.io/v1alpha1
@@ -38,18 +51,6 @@ sources:
     build:
       builder: paketobuildpacks/builder:base
 
----
-apiVersion: kbld.k14s.io/v1alpha1
-kind: Sources
-sources:
-- image: feed2wiki
-  path: feed2wiki
-  pack:
-    build:
-      builder: rg.nl-ams.scw.cloud/carlo-colombo/elixir-builder
-      rawOptions:
-        - --volume
-        - #@ data.values.release.deps_path + "/common:/deps/common"
 #! Specifies where to push app1 image
 ---
 apiVersion: kbld.k14s.io/v1alpha1
