--- a/apps/dashboard/.gitignore
+++ b/apps/dashboard/.gitignore
@@ -22,13 +22,14 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 dashboard-*.tar
 
-# If NPM crashes, it generates a log, let's ignore it too.
-npm-debug.log
+# Ignore assets that are produced by build tools.
+/priv/static/assets/
 
-# The directory NPM downloads your dependencies sources to.
+# In case you use Node.js/npm, you want to ignore these.
+npm-debug.log
 /assets/node_modules/
 
-# Since we are building assets from assets/,
-# we ignore priv/static. You may want to comment
-# this depending on your deployment strategy.
-/priv/static/
+# Database files
+*.db
+*.db-*
+
