updating tiddlywiki image to 5.2.5, using local dockerfile

--- a/spec/blog.yml
+++ b/spec/blog.yml
@@ -1,6 +1,6 @@
 #@ def blog_generation():
 - name: blog-generation
-  image: elasticdog/tiddlywiki
+  image: tiddlywiki
   args:
     - "/tiddlywiki"
     - --build-tiddler
