passing the bucket explicitly to minio putobject, bucket name from env var

--- a/spec/pixelfed2wiki.yml
+++ b/spec/pixelfed2wiki.yml
@@ -50,5 +50,7 @@ spec:
                   secretKeyRef:
                     name: litapp-blog-images-creds
                     key: SECRET_KEY
+              - name: UPLOAD_BUCKET
+                value: litapp-blog-images
           restartPolicy: Never
       backoffLimit: 4
